--- a/mirix/configs/mirix_custom_model.yaml
+++ b/mirix/configs/mirix_custom_model.yaml
@@ -1,6 +1,6 @@
 agent_name: mirix
-model_name: qwen3-32b
-model_endpoint: http://localhost:47283/v1
+model_name: qwen2-vl-7b-instruct
+model_endpoint: http://127.0.0.1:1234/v1
 model_provider: local_server
 api_key: EMPTY
 generation_config:
