--- a/mirix/configs/examples/mirix_gemini.yaml
+++ b/mirix/configs/examples/mirix_gemini.yaml
@@ -8,7 +8,7 @@ llm_config:
   context_window: 1000000
 
 embedding_config:
-  embedding_model: "text-embedding-004"
+  embedding_model: "gemini-embedding-001"
   embedding_endpoint_type: "google_ai"
   embedding_endpoint: "https://generativelanguage.googleapis.com"
   embedding_dim: 768
