feat: add search_raw_memories function and endpoint (#43)
* feat: search raw memories and testing utilities

* integration support

* fiux: fix tests

* chore: comment

--- a/pytest.ini
+++ b/pytest.ini
@@ -26,6 +26,10 @@ filterwarnings =
     ignore:Support for class-based.*:DeprecationWarning
     ignore:Using extra keyword arguments.*:DeprecationWarning
     ignore:json_encoders is deprecated.*:DeprecationWarning
+    # Ignore third-party library warnings
+    ignore::DeprecationWarning:speech_recognition
+    ignore::RuntimeWarning:pydub
+    ignore:Couldn't find ffmpeg.*:RuntimeWarning
 
 [coverage:run]
 source = mirix
